# lulu

./: .gitignore  Cargo.toml  LULU.toml  README.md  lulu.conf
.github/workflows/: build.yml
src/: db.rs  main.rs  model.rs  package.rs
src/commands/: install.rs  list.rs  mod.rs  remove.rs  setup.rs  update.rs  upgrade.rs
src/utils/: display.rs  mod.rs
